Changelog
=========

1.0b5 (unreleased)
------------------


- Allow use of ``templer`` as a command for testing purposes
  [davisagli]

- Remove all code supporting automatic adding of SVN repositories
  [davisagli]

- Local commands can now be run using ``bin/templer add``
  if templer.localcommands is present.
  [davisagli]

- Don't run the setuptools egg_info command as part of running a template.
  This avoids installing package dependencies in ways that can be problematic.
  [davisagli]

- Non specific number of name spaces
  [maikroeder]

- Add a Makefile for development generated by tooth.paste
  [maikroeder]

- Add Sphinx docs section
  [maikroeder]

- Add AGPLv3 license
  [iElectric]

- Refactor code in the templer control script to help ease re-use by templer
  applications like ZopeSkel
  [cewing]

1.0b4 May 17, 2012
------------------

- Refactored test setup code for better sharing across packages
  [cewing]

- Fixed bug in test setup exposed by mixing doc and non-doc tests using
  os.getcwd()
  [cewing]

- Fix packaging problems and normalize setup.py
  [hvelarde]

- Convert to unittest2 and remove deprecated test assertion aliases
  [hvelarde]

- Restore support for localcommands as were present in ZopeSkel.  Improve
  localcommands by making them optional
  [cewing]

- Provide exit so you can bail from a template run cleanly.  Improve exit 
  conditions throughout the templer script
  [cewing]

- Fixed long-standing bug in tests that showed subpackages failing when they
  in fact succeeded
  [Lazaro Clapp]

- Factor structures code into a separate method so we can use it in vars, too
  [cewing]

1.0b3 October 6, 2011
---------------------

- relicense as MIT to keep in sync with ZopeSkel as its internals are replaced
  [cewing]

1.0b2 December 8, 2010
----------------------

- Fixed bug in structure system that broke template rendering when a template 
  had no license 
  [Cris Ewing]
